# tmc-android

./: .gitignore
.github/workflows/: android-ci.yml
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/tmc/: GameActivity.java  PrelauncherActivity.java  TMCActivity.java
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/jni/src/: port_android_audio.c  port_android_audio.h  port_android_config.c  port_android_input.c  port_android_input.h  port_android_m4a_backend.cpp  port_android_main.c  port_android_ppu.c  port_android_render.c  port_android_render.h  port_android_rom.c  port_android_rom.h
android/app/src/main/jni/src/SDL3/: SDL.h
android/app/src/main/jni/src/virtuaapu_stub/: virtuaapu.c  virtuaapu.h
android/app/src/main/jni/src/viruappu_stub/: virtuappu.c  virtuappu.h
android/app/src/main/jni/src/viruappu_stub/cpu/: mode1.h
android/app/src/main/res/values/: strings.xml  themes.xml
include/gba/: gba.h
port/: port_bios.c  port_rom.c
src/: common.c  main.c
